<resources>
    <string name="app_name">MiStoly</string>
    <string name="isRequired">is Required</string>
    <string name="needAtLeast">need at least</string>
    <string name="character">character</string>
    <string name="back">back</string>
    <string name="login_title">"Lets see some story"</string>
    <string name="illustration">Illustration</string>
    <string name="email_hint">Email</string>
    <string name="login">Login</string>
    <string name="signup_hint">"Doesn't have account? Register!"</string>
    <string name="signup_title">"Let's create some account so you can see some stoly."</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="name_hint">Name</string>
    <string name="signup">Sign Up</string>
    <string name="story">Story</string>
    <string name="story_image">Story Image</string>
    <string name="hyphen">-</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="notMatch">not Match</string>
    <string name="logout">Logout</string>
    <string name="add_story">Add Story</string>
    <string name="submit">Submit</string>
    <string name="add_your_story_title">Add Your Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image_story">Story Image</string>
    <string name="need_image">Please input image for your story</string>
    <string name="successful">Successful Add Story</string>
    <string name="failed">Please check your connection</string>
    <string name="add_description">Please add description first</string>
    <string name="description">Description</string>
    <string name="created_by">Created by</string>
    <string name="on">on</string>
    <string name="refresh">Refresh</string>
    <string name="empty">Empty</string>
    <string name="empty_list">No Story to Show</string>
    <string name="error_message">There is a problem</string>
    <string name="appwidget_text">Stoly Shelf</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Widget for story list</string>
</resources>