<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stoly.DetailStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="-16dp"
                app:cardCornerRadius="@dimen/normal">

                <ImageView
                    android:id="@+id/iv_detail_photo"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_story"
                    android:foreground="@drawable/foreground_image"
                    android:paddingTop="@dimen/normal"
                    android:scaleType="centerCrop"
                    android:transitionName="profile"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal"
                android:layout_marginTop="@dimen/normal"
                android:text="@string/hyphen"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal"
                android:text="@string/lorem"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/tv_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal"
                android:paddingBottom="@dimen/small"
                android:text="@string/hyphen"
                android:transitionName="name" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="@dimen/extra_large"
        android:layout_height="@dimen/extra_large"
        android:layout_margin="@dimen/normal"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>